<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".view.LoginActivity"
    >

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">
      <LinearLayout
          android:layout_width="match_parent"
          android:orientation="vertical"
          android:layout_height="match_parent">
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="70dp"
              android:gravity="center"
              android:orientation="vertical"
              >

              <ImageView
                  android:layout_width="150dp"
                  android:layout_height="150dp"
                  android:layout_gravity="center_horizontal"
                  android:background="@drawable/logo_300"
                  >

              </ImageView>

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="5dp"
                  android:fontFamily="@font/montserrat_bold"
                  android:gravity="center"
                  android:padding="5dp"
                  android:text="Global Funds Group"
                  android:textAllCaps="true"
                  android:textColor="@color/txt_color_green"
                  android:textSize="18dp"
                  ></TextView>
          </LinearLayout>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="40dp"
              android:layout_marginLeft="20dp"
              android:layout_marginTop="60dp"
              android:layout_marginRight="20dp"
              android:weightSum="1"
              >

              <LinearLayout
                  android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="0.2"
                  android:background="@drawable/bg_white_left_round"
                  android:gravity="center"
                  >

                  <ImageView
                      android:layout_width="30dp"
                      android:layout_height="30dp"
                      android:background="@drawable/ic_user"
                      android:backgroundTint="#459b93"
                      >

                  </ImageView>
              </LinearLayout>

              <LinearLayout
                  android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="0.8"
                  android:background="@drawable/bg_green_right_round"
                  android:padding="5dp"
                  >

                  <EditText
                      android:id="@+id/et_user_id"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:background="@color/transparent_color"
                      android:hint="@string/username"
                      android:padding="5dp"
                      android:fontFamily="@font/montserrat_regular"
                      android:textColor="@color/white"
                      android:textColorHint="@color/white"
                      >

                  </EditText>
              </LinearLayout>
          </LinearLayout>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="40dp"
              android:layout_marginLeft="20dp"
              android:layout_marginTop="20dp"
              android:layout_marginRight="20dp"
              android:weightSum="1"
              >

              <LinearLayout
                  android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="0.2"
                  android:background="@drawable/bg_white_left_round"
                  android:gravity="center"
                  >

                  <ImageView
                      android:layout_width="30dp"
                      android:layout_height="30dp"
                      android:background="@drawable/ic_lock"
                      android:backgroundTint="#459b93"
                      >

                  </ImageView>
              </LinearLayout>

              <LinearLayout
                  android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="0.8"
                  android:background="@drawable/bg_green_right_round"
                  android:padding="5dp"
                  >

                  <EditText
                      android:id="@+id/et_password"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:background="@color/transparent_color"
                      android:hint="@string/pwd"
                      android:inputType="textPassword"
                      android:padding="5dp"
                      android:fontFamily="@font/montserrat_regular"
                      android:textColor="@color/white"
                      android:textColorHint="@color/white"
                      >

                  </EditText>
              </LinearLayout>
          </LinearLayout>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="30dp"
              android:layout_marginLeft="20dp"
              android:layout_marginTop="5dp"
              android:layout_marginRight="20dp"
              android:weightSum="1">
              <TextView
                  android:id="@+id/txt_forgot_pwd"
                  android:layout_width="0dp"
                  android:layout_weight="0.55"
                  android:gravity="center_vertical"
                  android:text="@string/forgot_password"
                  android:textSize="16dp"
                  android:textColor="@color/txt_color_green"
                  android:fontFamily="@font/montserrat_bold"
                  android:layout_height="match_parent">

              </TextView>
              <CheckBox
                  android:id="@+id/ch_remember_me"
                  android:layout_width="0dp"
                  android:layout_weight="0.4"
                  android:layout_gravity="right"
                  android:layout_marginLeft="5dp"
                  android:text="@string/remeber_me"
                  android:gravity="center_vertical"
                  android:textSize="14dp"
                  android:fontFamily="@font/montserrat_bold"
                  android:buttonTint="@color/txt_color_green"
                  android:textColor="@color/txt_color_green"
                  android:layout_height="match_parent">

              </CheckBox>
          </LinearLayout>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_marginLeft="40dp"
              android:layout_marginTop="40dp"
              android:layout_marginRight="40dp"
              android:background="@drawable/button_gradient"
              android:layout_height="40dp">
              <TextView
                  android:id="@+id/txt_login"
                  android:layout_width="match_parent"
                  android:text="Login"
                  android:textSize="20dp"
                  android:textColor="@color/white"
                  android:textAllCaps="true"
                  android:fontFamily="@font/montserrat_regular"
                  android:gravity="center"
                  android:layout_height="match_parent">

              </TextView>
          </LinearLayout>
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="25dp"
              android:layout_marginLeft="40dp"
              android:layout_marginTop="5dp"
              android:layout_marginRight="40dp"
              android:weightSum="1">
              <TextView
                  android:layout_width="wrap_content"
                  android:gravity="center"
                  android:text="@string/dont_have_account"
                  android:textSize="15dp"
                  android:textColor="@color/txt_color_green"
                  android:fontFamily="@font/montserrat_bold"
                  android:layout_height="match_parent">

              </TextView>
              <TextView
                  android:id="@+id/txt_sign_up"
                  android:layout_width="wrap_content"
                  android:gravity="center"
                  android:text="@string/sign_up"
                  android:layout_marginLeft="2dp"
                  android:textSize="18dp"
                  android:textColor="@color/txt_color_green"
                  android:fontFamily="@font/montserrat_bold"
                  android:layout_height="match_parent">
              </TextView>
              <TextView
                  android:layout_width="wrap_content"
                  android:gravity="center"
                  android:text="@string/now"
                  android:textSize="15dp"
                  android:layout_marginLeft="10dp"
                  android:textColor="@color/txt_color_green"
                  android:fontFamily="@font/montserrat_bold"
                  android:layout_height="match_parent">

              </TextView>
          </LinearLayout>
      </LinearLayout>
  </ScrollView>
</LinearLayout>